Correct spacing for IE8/9 on language and theme submenus

--- a/themes/webtrees/msie.css
+++ b/themes/webtrees/msie.css
@@ -33,4 +33,6 @@
 a.showit:hover span {
 	filter: alpha(opacity=85);
 }
-
+.makeMenu li ul {
+	top: 2px;
+}
